Fix highlight height on small screens

--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -119,9 +119,11 @@ h1 {
     flex-direction: column;
   }
 
-  a {
-    &::before {
-      height: 2px;
+  p {
+    a {
+      &::before {
+        height: 2px;
+      }
     }
   }
 
